# funcspec-cli

./: AGENTS.md  Cargo.toml  FUNCSPEC.md  Makefile  README.md  SPECS-PHASE2.md  SPECS-PHASE3A.md  SPECS-PHASE3B.md  SPECS-PHASE3C.md  SPECS-PHASE4A.md  SPECS-PHASE4B.md  SPECS-PHASE5.md  SPECS.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: funcspec.rb
crates/funcspec-cli/: Cargo.toml
crates/funcspec-cli/locales/: ar.yml  de.yml  en.yml  es.yml  fr.yml  ja.yml  pt-BR.yml  ru.yml  zh-CN.yml  zh-TW.yml
crates/funcspec-cli/src/: cli.rs  config.rs  context.rs  lib.rs  main.rs  output.rs
crates/funcspec-cli/src/commands/: ai.rs  auth.rs  config.rs  doctor.rs  edges.rs  export.rs  instructions.rs  items.rs  mod.rs  onboard.rs  projects.rs  runs.rs  search.rs  snapshots.rs  stats.rs  version.rs  view.rs
crates/funcspec-cli/src/templates/: funcspec_md.tmpl
crates/funcspec-cli/tests/: cli_test.rs  config_test.rs
crates/funcspec-client/: Cargo.toml
crates/funcspec-client/src/: blocking.rs  client.rs  error.rs  lib.rs  models.rs  pagination.rs
crates/funcspec-client/tests/: client_test.rs  pagination_integration_test.rs
skills/funcspec/: SKILL.md
tests/integration/: lifecycle_test.sh
