[workspace]
members = ["crates/funcspec-client", "crates/funcspec-cli"]
resolver = "2"

[workspace.package]
version = "0.2.18"
edition = "2024"
authors = ["Christian Clare <narbs@narbs.net>"]
license = "MIT"
repository = "https://github.com/narbs/funcspec-cli"
homepage = "https://funcspec.net"

[workspace.dependencies]
# HTTP & serialization
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Config
toml = "0.8"
dirs = "6"

# Output formatting
comfy-table = "7"
colored = "3"
console = "0.15"
indicatif = "0.17"
similar = "2"
terminal_size = "0.4"
csv = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/debug
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
url = "2"
open = "5"

# i18n
rust-i18n = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
