[package]
name = "funcspec-cli"
description = "Command-line interface for FuncSpec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "funcspec"
path = "src/main.rs"

[dependencies]
funcspec-client = { path = "../funcspec-client" }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
dialoguer = "0.11"
rpassword = "7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio = { workspace = true }
