[package]
name = "funcspec-client"
description = "Rust client library for the FuncSpec API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["funcspec", "api-client", "async", "http"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
blocking = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
serde_json = { workspace = true }
